# rd-alps-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  temp1.txt  temp2
include/: deviceDetection.h  encoding.h  framework.h  loadLibrary.h  logger.h  rd-alps.h  resource.h  targetver.h  writing.h
include/CUDA/: cudaStartup.h
include/Device/: deviceIDGenerator.h  enumerateDisplayDevices.h
include/Log/: log.h
include/Text/: textWriter.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/: CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDec/: AppDec.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecD3D/: AppDecD3D.cpp  CMakeLists.txt  FramePresenterD3D.h  FramePresenterD3D11.h  FramePresenterD3D9.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecGL/: AppDecGL.cpp  CMakeLists.txt  FramePresenter.h  FramePresenterGLUT.h  FramePresenterGLX.cpp  FramePresenterGLX.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecLowLatency/: AppDecLowLatency.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecMem/: AppDecMem.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecMultiFiles/: AppDecMultiFiles.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecMultiInput/: AppDecMultiInput.cpp  CMakeLists.txt  Image.cu
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/AppDecPerf/: AppDecPerf.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppDecode/Common/: AppDecUtils.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncD3D11/: AppEncD3D11.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncD3D12/: AppEncD3D12.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncDec/: AppEncDec.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncGL/: AppEncGL.cpp  CMakeLists.txt  GraphicsUtils.cpp  GraphicsUtils.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncLowLatency/: AppEncLowLatency.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncME/: AppEncME.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncMultiInstance/: AppEncMultiInstance.cpp  AppEncMultiInstance.h  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncPerf/: AppEncPerf.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppEncQual/: AppEncQual.cpp  CMakeLists.txt  PSNR.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  CMakeLists.txt  NvEnc.cpp  NvEnc.h  utility.cpp  utility.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppEncode/Common/: AppEncUtils.h  AppEncUtilsD3D11.h
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppTranscode/AppTrans/: AppTrans.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppTranscode/AppTransOneToN/: AppTransOneToN.cpp  CMakeLists.txt
lib/NVIDIA/Video_Codec_SDK_12.1.14/Samples/AppTranscode/AppTransPerf/: AppTransPerf.cpp  CMakeLists.txt
lib/ffmpeg/debug/lib/: avformat.lib  avutil.lib  swscale.lib
lib/ffmpeg/debug/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
lib/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  swresample.lib
lib/ffmpeg/lib/pkgconfig/: libavformat.pc
lib/ffmpeg/share/ffmpeg/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: console.h  hello.cu  main.cpp  rd-alps.aps  rd-alps.cpp  rd-alps.h  rd-alps.rc  startup.cpp  startup.h
src/C++/: CMakeLists.txt
src/C++/Device/: deviceIDGenerator.cpp  enumerateDisplayDevices.cpp
src/C++/Log/: log.cpp
src/C++/Monitor/: monitorSelection.cpp
src/C++/Number/: integerWriter.cpp
src/CUDA/: CMakeLists.txt
src/CUDA/Startup/: cudaStartup.cu  startup.cu
src/Capture/: screenCapture.cpp
src/Console/: console.cpp
src/Cuda/CUDA/: CUDA.sln  CUDA.vcxproj
src/Cuda/CUDA/x64/Debug/: CUDA.exe.recipe  CUDA.exp  CUDA.ilk  CUDA.lib  CUDA.vcxproj.FileListAbsolute.txt  kernel.cu.cache  kernel.cu864243.deps
src/Cuda/CUDA/x64/Debug/CUDA.tlog/: CUDA.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
src/GPU/: deviceDetection.cpp  encoding.cpp
src/Load/: loadLibrary.cpp
src/Log/: logger.cpp
src/Monitor/: monitorInfoManager.cpp
src/Text/: textWriter.cpp
src/Window/: writing.cpp
src/headers/Capture/: screenCapture.h
src/headers/Monitor/: monitorInfoManager.h  monitorSelection.h
src/headers/Number/: integerWriter.h
